# synthetic-financials

./: .gitignore  README.md  backup.txt  gmm_vs_ctgan.md  learn_ydata_synthetic.py  main.py  main_synthcity.py  models_comparison.ipynb  pyproject.toml  simple-tests.sh  synthera.py  utils.py
.claude/: settings.json
outputs/: ctgan_training_log.csv  gmm_component_0_correlation_matrix.csv  gmm_component_1_correlation_matrix.csv  gmm_component_means.csv  real_data_gmm_20260305_140627.csv  synthetic_data_ctgan_20260305_133502.csv  synthetic_data_gmm_20260305_140627.csv  synthetic_data_timegan_20260305_145931.csv  synthetic_data_timegan_20260305_150928.csv  synthetic_data_timegan_20260305_151852.csv
sandbox/: synthera.py
