[project]
name = "synthetic-financials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "synthera>=0.2.9",
    "ydata-synthetic>=1.3",
    "yfinance>=0.2.50",
    "click>=8.0",
    "tensorflow>=2.15.1",
]

[tool.uv]
# tensorflow-io-gcs-filesystem has no Windows wheels; exclude it on Windows.
# TimeGAN (which needs TensorFlow) won't work on Windows, but CTGAN and GMM will.
override-dependencies = [
    "tensorflow-io-gcs-filesystem ; sys_platform != 'win32'",
    "requests>=2.31",
]
