[project]
name = "synthetic-financials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ydata-synthetic==1.4.0",
    "yfinance>=0.2.0",
    "click>=8.0",
    "tensorflow==2.15.*",
]

[project.optional-dependencies]
dev = [
    "plotly-express>=0.4.1",
    "nbformat>=5.10.4",
]

